# editor

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG.ru.md  CHANGELOG.zh.md  README.md  README.ru.md  README.zh.md  build-binaries.sh
.github/workflows/: ci.yml  release.yml
docs/: emacs.md  helix.md  neovim.md  sublime.md  zed.md
grammars/: README.md
intellij/: .gitignore  CHANGELOG.md  CHANGELOG.ru.md  CHANGELOG.zh.md  README.md  README.ru.md  README.zh.md  STATUS.md  TEXTMATE_REGISTRATION_PROBLEM.md  build.gradle.kts  dev-rebuild.sh  gradle.properties  settings.gradle.kts  test-cyrillic.ktav
intellij/src/main/kotlin/lang/ktav/: KtavBraceMatcher.kt  KtavCommenter.kt  KtavFileType.kt  (+5 more)
lsp/: .gitignore  CHANGELOG.md  CHANGELOG.ru.md  CHANGELOG.zh.md  Cargo.toml  README.md  README.ru.md  README.zh.md  bench-baseline.md
lsp/benches/: build_symbols.rs  encoding_hot_paths.rs  fixtures.rs  parse_for_diagnostics.rs  semantic_tokens.rs
lsp/src/: diagnostics.rs  lib.rs  main.rs  reindent.rs  semantic.rs  server.rs  symbols.rs  tokens.rs
lsp/tests/: error_format_pinning.rs  format_pipeline.rs  integration.rs  spec_conformance.rs  structured_diagnostics.rs
vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  dev-rebuild.sh  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode/scripts/: make-icon.js  sync-grammars.js
vscode/src/: discovery.ts  extension.ts
vscode/src/test/: runTest.ts
vscode/src/test/suite/: extension.test.ts  index.ts
vscode/src/test/unit/: discovery.test.ts
vscode/syntaxes/: ktav.tmLanguage.json
(+29 files in other folders)
