[package]
name = "ktav-lsp"
version = "0.1.0"
edition = "2021"
description = "LSP server for the Ktav configuration format"
license = "MIT"
repository = "https://github.com/ktav-lang/editor"
authors = ["Marat K <phpcraftdream@gmail.com>"]
readme = "README.md"
keywords = ["lsp", "ktav", "config", "language-server"]
categories = ["development-tools", "config"]
rust-version = "1.70"

[[bin]]
name = "ktav-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ktav = "0.1.4"
dashmap = "6"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse_for_diagnostics"
harness = false

[[bench]]
name = "semantic_tokens"
harness = false

[[bench]]
name = "build_symbols"
harness = false

[[bench]]
name = "encoding_hot_paths"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
